bar-foo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8090}]'
spec:
  rules:
  - http:
      paths:
      - path: "/foo"
        pathType: Prefix
        backend:
          service:
            name: foo-service
            port:
              number: 5678
      - path: "/bar"
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 5678
